[package]
name = "wallmanager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
inquire = { version = "0.3.0", features = ["editor"] }
log = "0.4.17"
notify = "5.0.0"
rand = "0.8.5"
wallpaper = "3.2.0"
