[package]
name = "wallmanager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
notify = "5.0.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
wallpaper = "3.2.0"
